frontend/src/styles/box.scss
.react-grid-item.YouTube-box {
    display: none;
    overflow-y: auto;
    background: #08a4bd;
    border-radius: 10px;
    width: min-content;
}

.GoogleNews-box {
    overflow-y: auto;
    background-color: #e4572e;
    border-radius: 10px;
}

.Imgur-box {
    overflow-y: auto;
    background: #f3a712; 
    border-radius: 10px;
}

.Placeholder-box {
    display: none;
}

